--- a/style-css/style.css
+++ b/style-css/style.css
@@ -5,3 +5,61 @@
     box-sizing: border-box;
 
 }
+
+body{
+
+    background-color: aquamarine;
+    
+}
+
+.container{
+    background-color: blueviolet;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    height: 100vh;
+}
+
+.containerImg{
+
+    width: 45rem;
+    height: 25rem;
+    background-color: red;
+    position: relative;
+}
+
+.img{
+    display: none;
+    height: 100%;
+}
+
+.img img{
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+   
+}
+
+.show{
+
+    display: block;
+}
+
+.incremento, .decremento{
+    border-radius: 50%;
+    position: absolute;
+    z-index: 3;
+    padding: 2px 3px;
+    left: 50%;
+    border-width: 0;
+    background-color: rgba(220, 220, 220, 0.8);
+}
+
+.incremento{
+    top: .3125rem;
+}
+.decremento{
+    bottom: 5px;
+}
