--- a/style-css/style.css
+++ b/style-css/style.css
@@ -55,6 +55,7 @@ body{
     left: 50%;
     border-width: 0;
     background-color: rgba(220, 220, 220, 0.8);
+    display: block;
 }
 
 .incremento{
